--- a/Gallery/Views/FolderListView.axaml
+++ b/Gallery/Views/FolderListView.axaml
@@ -7,14 +7,25 @@
              x:Class="Gallery.Views.FolderListView">
     <TreeView Items="{Binding Items}" SelectedItems="{Binding SelectedItems}" SelectionMode="Multiple">
         <TreeView.Styles>
-            <!-- is Style really the best way to bind IsExpanded? -->
             <Style Selector="TreeViewItem">
                 <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
             </Style>
         </TreeView.Styles>
         <TreeView.ItemTemplate>
             <TreeDataTemplate ItemsSource="{Binding Children}">
-                <TextBlock Text="{Binding Name}"/>
+                <TextBlock Text="{Binding Name}">
+                    <TextBlock.ContextMenu>
+                        <ContextMenu>
+                            <MenuItem Header="Is tracked!" IsVisible="{Binding IsTracked^}"/>
+                            <MenuItem Header="Track folder"
+                                      Command="{Binding $parent[TreeView].DataContext.TrackFolderCommand}"
+                                      CommandParameter="{Binding}"
+                                      IsVisible="{Binding !IsTracked^}"/>
+                            <MenuItem Header="Track all selected folders"
+                                      Command="{Binding $parent[TreeView].DataContext.TrackSelectedFoldersCommand}"/>
+                        </ContextMenu>
+                    </TextBlock.ContextMenu>
+                </TextBlock>
             </TreeDataTemplate>
         </TreeView.ItemTemplate>
     </TreeView>
