--- a/Gallery/App.axaml
+++ b/Gallery/App.axaml
@@ -8,5 +8,6 @@
 
     <Application.Styles>
         <FluentTheme Mode="Dark"/>
+        <StyleInclude Source="/Icons.axaml"/>
     </Application.Styles>
 </Application>
