--- a/Gallery/Views/AddTagsView.axaml
+++ b/Gallery/Views/AddTagsView.axaml
@@ -2,32 +2,74 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="300"
+             xmlns:m="using:Gallery.Models"
+             xmlns:c="using:Gallery.Converters"
+             mc:Ignorable="d" d:DesignWidth="700" d:DesignHeight="300"
              x:Class="Gallery.Views.AddTagsView">
     <StackPanel Margin="15" HorizontalAlignment="Stretch">
+        <StackPanel.Styles>
+            <Style Selector="Label">
+                <Setter Property="Margin" Value="0,0,10,0"/>
+            </Style>
+            <Style Selector="Label.small">
+                <Setter Property="FontSize" Value="12"/>
+                <Setter Property="FontStyle" Value="Italic"/>
+            </Style>
+            <Style Selector="TextBox">
+                <Setter Property="Margin" Value="0,0,15,0"/>
+                <Setter Property="VerticalAlignment" Value="Top"/>
+                <Setter Property="Width" Value="120"/>
+            </Style>
+            <Style Selector="ComboBox">
+                <Setter Property="Width" Value="120"/>
+            </Style>
+        </StackPanel.Styles>
 
-        <StackPanel Orientation="Horizontal" Margin="0,0,0,15">
-            <StackPanel.Styles>
-                <Style Selector="Label">
-                    <Setter Property="Margin" Value="0,0,10,0"/>
-                </Style>
-                <Style Selector="Label.small">
-                    <Setter Property="FontSize" Value="12"/>
-                    <Setter Property="FontStyle" Value="Italic"/>
-                </Style>
-                <Style Selector="TextBox">
-                    <Setter Property="Margin" Value="0,0,15,0"/>
-                    <Setter Property="VerticalAlignment" Value="Top"/>
-                </Style>
-            </StackPanel.Styles>
-
+        <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
             <Label>Tag name:</Label>
-            <TextBox Text="{Binding Name}" Width="120"/>
+            <TextBox Text="{Binding Name}"/>
+            
             <StackPanel>
                 <Label>Value:</Label>
                 <Label Classes="small">(optional)</Label>
             </StackPanel>
-            <TextBox Text="{Binding Value}" Width="120"/>
+            <TextBox Text="{Binding Value}"/>
+
+            <Label>Tag group:</Label>
+            <ComboBox Items="{Binding AvailableGroups}"
+                        SelectedItem="{Binding SelectedGroup}">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <Label Background="{Binding Color}"
+                               Foreground="{Binding $self.Background,
+                                            Converter={x:Static c:Converters.ContrastText}}"
+                               Content="{Binding Name}"/>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+        </StackPanel>
+
+        <StackPanel Margin="0,0,0,15">
+            <Button HorizontalAlignment="Right"
+                    IsVisible="{Binding !IsAddingGroup}"
+                    Command="{Binding ToggleAddGroupControls}">
+                New group...
+            </Button>
+            
+            <StackPanel IsVisible="{Binding IsAddingGroup}"
+                Orientation="Horizontal"
+                HorizontalAlignment="Right">
+                <Label VerticalAlignment="Center">Name:</Label>
+                <TextBox Text="{Binding GroupName}"/>
+                <Label VerticalAlignment="Center">Color:</Label>
+                <TextBox Text="{Binding Color}" MaxLength="7"/>
+                <Border CornerRadius="3" Width="30" Height="30"
+                        Background="{Binding LastValidColor}"
+                        BorderBrush="Gray"
+                        BorderThickness="1.5"/>
+                <Button Command="{Binding AddGroupCommand}" Margin="20,0,10,0">Add</Button>
+                <Button Command="{Binding ToggleAddGroupControls}">X</Button>
+            </StackPanel>
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
