--- a/Gallery/App.axaml
+++ b/Gallery/App.axaml
@@ -1,9 +1,21 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="using:Gallery"
+             xmlns:c="using:Gallery.Converters"
              x:Class="Gallery.App">
     <Application.DataTemplates>
         <local:ViewLocator/>
+
+        <DataTemplate DataType="local:Models.Tag">
+            <Border ToolTip.Tip="{Binding FullString}"
+                    Background="{Binding Group.Color, TargetNullValue={x:Static Brushes.DarkMagenta}}"
+                    CornerRadius="5"
+                    Padding="5">
+                <TextBlock Text="{Binding FullString}"
+                           TextTrimming="CharacterEllipsis"
+                           Foreground="{Binding Group.Color, Converter={x:Static c:Converters.ContrastText}}"/>
+            </Border>
+        </DataTemplate>
     </Application.DataTemplates>
 
     <Application.Styles>
