--- a/Gallery/Views/DialogWindow.axaml
+++ b/Gallery/Views/DialogWindow.axaml
@@ -5,6 +5,7 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Gallery.Views.DialogWindow"
         SizeToContent="WidthAndHeight"
+        WindowStartupLocation="CenterOwner"
         Title="{Binding WindowTitle}"
         Content="{Binding}">
 </Window>
