--- a/Gallery/Views/MainShellView.axaml
+++ b/Gallery/Views/MainShellView.axaml
@@ -4,16 +4,72 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:rxui="http://reactiveui.net"
              xmlns:local="using:Gallery"
+             xmlns:vm="using:Gallery.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Gallery.Views.MainShellView">
-    <DockPanel>
-        <ContentControl DockPanel.Dock="Top"
-                        Content="{Binding Header}"/>
+    <Grid ColumnDefinitions="300, Auto, *" RowDefinitions="Auto, *">
+        <Grid.Styles>
+            <Style Selector="TextBlock.h1">
+                <Setter Property="FontSize" Value="24"/>
+            </Style>
+            <Style Selector="TextBlock.h2">
+                <Setter Property="FontSize" Value="18"/>
+            </Style>
+            
+            <Style Selector="Button.icon-button">
+                <Setter Property="Background" Value="Transparent"/>
+                <Setter Property="Padding" Value="5"/>
+            </Style>
+            <Style Selector="Button.icon-button:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+                <Setter Property="Background" Value="DimGray"/>
+            </Style>
+            <Style Selector="Button.icon-button:disabled PathIcon">
+                <Setter Property="Foreground" Value="Gray"/>
+            </Style>
+            <Style Selector="Button.icon-button:disabled /template/ ContentPresenter#PART_ContentPresenter">
+                <Setter Property="Background" Value="Transparent"/>
+            </Style>
+        </Grid.Styles>
+
+        <DockPanel Grid.Row="0" Grid.Column="0" Margin="5">
+            <Button DockPanel.Dock="Left" Classes="icon-button" Command="{Binding BackCommand}">
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Height="40">
+                    <PathIcon Data="{StaticResource arrow_left_circle_regular}" Width="30" Height="30"/>
+                    <TextBlock Classes="h2" VerticalAlignment="Center" Margin="8,0,0,0">
+                        Back
+                    </TextBlock>
+                </StackPanel>
+            </Button>
+        </DockPanel>
+
+        <DockPanel Grid.Row="0" Grid.Column="2" Margin="5">
+            <Button DockPanel.Dock="Right" Classes="icon-button" Command="{Binding SearchCommand}">
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Height="40">
+                    <PathIcon Data="{StaticResource search_regular}" Width="22" Height="22"/>
+                    <TextBlock FontSize="18" VerticalAlignment="Center" Margin="8,0,5,0">
+                        Search
+                    </TextBlock>
+                </StackPanel>
+            </Button>
+
+            <Label VerticalAlignment="Center" Margin="-5,0,0,0">
+                <TextBlock Classes="h1" Text="{Binding Title^}"/>
+            </Label>
+        </DockPanel>
         
-        <ContentControl DockPanel.Dock="Left" 
-                        Content="{Binding FolderList}"
-                        Width="300"/>
+        <ContentControl Grid.Row="1" Grid.Column="0" Content="{Binding FolderList}"/>
         
-        <rxui:RoutedViewHost Router="{Binding Router}" PageTransition="{x:Null}"/>
-    </DockPanel>
+        <rxui:RoutedViewHost Grid.Row="1" Grid.Column="2" 
+                             Router="{Binding Router}"
+                             PageTransition="{x:Null}"/>
+        
+        <GridSplitter Grid.RowSpan="2" Grid.Column="1"
+                      ResizeBehavior="PreviousAndNext"
+                      ResizeDirection="Columns"
+                      ShowsPreview="True"/>
+    </Grid>
+
+    <Design.DataContext>
+        <vm:MainShellViewModel/>
+    </Design.DataContext>
 </UserControl>
