Exception handling tweaks
Wrap more observables with error handling
Add general top-level exception handler
Option to continue or exit in exception dialog

--- a/Gallery.UI/Views/Dialogs/ErrorView.axaml
+++ b/Gallery.UI/Views/Dialogs/ErrorView.axaml
@@ -2,6 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:s="using:System"
              xmlns:v="using:Gallery.UI.Views"
              xmlns:vm="using:Gallery.UI.ViewModels"
              mc:Ignorable="d" Width="640"
@@ -12,8 +13,18 @@
                  IsReadOnly="True"
                  TextWrapping="Wrap"
                  MaxHeight="200" />
-        <Button Content="Continue"
-                Command="{Binding CloseCommand}"
-                HorizontalAlignment="Right"/>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Spacing="10">
+            <Button Content="Continue" Command="{Binding CloseCommand}">
+                <Button.CommandParameter>
+                    <s:Boolean>True</s:Boolean>
+                </Button.CommandParameter>
+            </Button>
+            <Button Content="Exit"
+                    Command="{Binding CloseCommand}">
+                <Button.CommandParameter>
+                    <s:Boolean>False</s:Boolean>
+                </Button.CommandParameter>
+            </Button>
+        </StackPanel>
     </StackPanel>
 </UserControl>
